--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Description: Video Disk Recorder for DVB cards
 Package: vdr-dev
 Architecture: all
 Depends: ${misc:Depends}, debhelper, linux-libc-dev (>= 3.0)
-Suggests: dh-make
+Suggests: dh-make, make
 Description: Video Disk Recorder for DVB cards
  Video Disk Recorder (VDR) is a digital sat-receiver program using
  Linux and DVB technologies. It allows one to record MPEG2 streams,
