vdr-dbg and vdr-plugin-*-dbg now install the debug symbols

--- a/debian/rules
+++ b/debian/rules
@@ -33,13 +33,18 @@ override_dh_install: patchinfo
 	    install -D PLUGINS/src/$$example/README debian/vdr-plugin-examples/usr/share/doc/vdr-plugin-examples/README.$$example; \
 	done
 
+override_dh_strip:
+	dh_strip -p vdr --dbg-package=vdr-dbg
+	dh_strip -p vdr-plugin-dvbsddevice --dbg-package=vdr-plugin-dvbsddevice-dbg
+	dh_strip -p vdr-plugin-dvbhddevice --dbg-package=vdr-plugin-dvbhddevice-dbg
+	dh_strip
 
 override_dh_installchangelogs:
 	dh_installchangelogs -pvdr HISTORY
 	dh_installchangelogs -pvdr-plugin-dvbsddevice PLUGINS/src/dvbsddevice/HISTORY
 	dh_installchangelogs -pvdr-plugin-dvbhddevice PLUGINS/src/dvbhddevice/HISTORY
 	dh_installchangelogs -pvdr-plugin-examples
-	dh_installchangelogs -pvdr-dev
+	dh_installchangelogs
 
 patchinfo:
 	sh debian/extract-patchinfo >debian/patchinfo
