Default video directory is now /var/lib/video because multiple video directories are not supported anymore

--- a/debian/vdr.config
+++ b/debian/vdr.config
@@ -5,8 +5,8 @@ set -e
 # source debconf lib
 . /usr/share/debconf/confmodule
 
-# ask about creating /var/lib/video.00
-if [ ! -e /var/lib/video.00 ]; then
+# ask about creating /var/lib/video
+if [ ! -e /var/lib/video -a ! -L /var/lib/video ]; then
     db_input high vdr/create_video_dir || true
     db_go
 fi
