--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Homepage: http://www.tvdr.de/
 
 Package: vdr
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, psmisc
+Depends: ${shlibs:Depends}, ${misc:Depends}, adduser
 Recommends: lirc, ttf-bitstream-vera | fonts-freefont-ttf
 Suggests: vdr-plugin-dvbsddevice
 Provides: ${vdr:Provides}
