--- a/debian/rules
+++ b/debian/rules
@@ -52,7 +52,7 @@ override_dh_installchangelogs:
 	dh_installchangelogs
 
 check-patches:
-	python debian/patchcheck.py -c $(PATCHCHECKOPTION)
+	python debian/patchcheck.py -c
 
 accept-patches:
-	python debian/patchcheck.py -u $(PATCHCHECKOPTION)
+	python debian/patchcheck.py -u
