--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,9 @@ Section: video
 Priority: extra
 Maintainer: Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>
 Uploaders: Thomas Schmidt <tschmidt@debian.org>, Tobias Grimm <etobi@debian.org>, Thomas Günther <tom@toms-cafe.de>
-Build-Depends: debhelper (>= 9), libjpeg-dev, libcap-dev,
+Build-Depends: debhelper (>= 9), libjpeg-dev, libcap-dev, dh-systemd,
   libncursesw5-dev, libfreetype6-dev, libfontconfig-dev, gettext,
-  python, linux-libc-dev (>= 3.0), libfribidi-dev
+  python, linux-libc-dev (>= 3.0), libfribidi-dev, libsystemd-daemon-dev
 Standards-Version: 3.9.6
 Vcs-Git: git://git.debian.org/pkg-vdr-dvb/vdr.git
 Vcs-Browser: http://git.debian.org/?p=pkg-vdr-dvb/vdr.git
