Don't ask for channels.conf and video-directory on installation

--- a/debian/vdr.config
+++ b/debian/vdr.config
@@ -3,16 +3,16 @@
 set -e
 
 # source debconf lib
-. /usr/share/debconf/confmodule
+#. /usr/share/debconf/confmodule
 
 # ask about creating /srv/vdr/video.00
-if [ ! -e /srv/vdr/video.00 -a ! -L /srv/vdr/video.00 ]; then
-    db_input high vdr/create_video_dir || true
-    db_go
-fi
+#if [ ! -e /srv/vdr/video.00 -a ! -L /srv/vdr/video.00 ]; then
+#    db_input high vdr/create_video_dir || true
+#    db_go
+#fi
 
 # ask about dvb card type
-db_input high vdr/select_dvb_card || true
-db_go
+#db_input high vdr/select_dvb_card || true
+#db_go
 
 exit 0
