Change video directory to /srv/vdr/video on fresh installations
If /srv/vdr/video.00 exists, video will be a symlink to it.
For backward compatibility /srv/vdr/video will be symlinked to video.00.

--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@
 CXXFLAGS += $(CPPFLAGS)
 CFLAGS += $(CPPFLAGS)
 PREFIX = /usr
-VIDEODIR = /srv/vdr/video.00
+VIDEODIR = /srv/vdr/video
 LIBDIR = /usr/lib/vdr/plugins
 MAKE_OPTIONS = PREFIX=$(PREFIX) VIDEODIR=$(VIDEODIR) LIBDIR=$(LIBDIR) SDNOTIFY=1
 
