--- a/debian/vdr.config
+++ b/debian/vdr.config
@@ -5,8 +5,8 @@ set -e
 # source debconf lib
 #. /usr/share/debconf/confmodule
 
-# ask about creating /srv/vdr/video.00
-#if [ ! -e /srv/vdr/video.00 -a ! -L /srv/vdr/video.00 ]; then
+# ask about creating /srv/vdr/video
+#if [ ! -e /srv/vdr/video -a ! -L /srv/vdr/video ]; then
 #    db_input high vdr/create_video_dir || true
 #    db_go
 #fi
