update systemd service

--- a/debian/vdr.service
+++ b/debian/vdr.service
@@ -3,6 +3,8 @@ Description=Video Disk Recorder
 
 [Service]
 Type=notify
+ExecStartPre=/bin/bash /usr/lib/vdr/merge-commands.sh "commands"
+ExecStartPre=/bin/bash /usr/lib/vdr/merge-commands.sh "reccmds"
 ExecStart=/usr/bin/vdr
 Restart=on-failure
 RestartPreventExitStatus=0 2
